Adapt beta workflow
Signed-off-by: Marcel Goerentz <m.goerentz@t-online.de>

--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -12,6 +12,9 @@ jobs:
       contents: write
     outputs:
       new_version: ${{ steps.set-build-number.outputs.new_version }}
+    env:
+      PRIVATE_KEY: ${{ secrets.SIGNING_KEY }}
+    
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v4
@@ -47,7 +50,6 @@ jobs:
       - name: Build binaries
         run: |
           go mod tidy && go mod vendor
-          echo "$PRIVATE_KEY=${{ secrets.SIGNING_KEY }}" >> $GITHUB_ENV
           bash ${GITHUB_WORKSPACE}/Utility/create_binaries.sh beta
 
       - name: Create a Release
